// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`append appends mounted element to mounted element 1`] = `
<body>
  <div
    id="parent"
  >
    <div
      id="child1"
    >
      <div
        id="child2"
      />
    </div>
  </div>
</body>
`;

exports[`append appends mounted element to unmounted element 1`] = `
<body>
  <div
    id="elem2"
  >
    <div
      id="elem1"
    />
  </div>
</body>
`;

exports[`append appends unmounted element to mounted element 1`] = `
<body>
  <div
    id="parent"
  >
    <div
      id="child"
    />
  </div>
</body>
`;

exports[`append appends unmounted element to unmounted element 1`] = `
<body>
  <div
    id="elem2"
  >
    <div
      id="elem1"
    />
  </div>
</body>
`;

exports[`append throws an error when appending element to itself 1`] = `
<body>
  <div
    id="elem"
  />
</body>
`;

exports[`append throws an error when appending parent to its child 1`] = `
<body>
  <div
    id="parent"
  >
    <div
      id="child"
    />
  </div>
</body>
`;
